--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier . --write"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "jsonwebtoken": "^9.0.2",
     "next": "15.5.0",
     "react": "19.1.0",
