--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   labvita-price:
-    build: ../../../Users/alexe/OneDrive/Рабочий стол/Новая папка
+    build: .
     ports:
       - '3000:3000'
     env_file:
-      - ../../../Users/alexe/OneDrive/Рабочий стол/Новая папка/.env
+      - .env
